--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
             </div>
         </div>
         <div class="footerSection2">
-            <h3>Allstate By Harsh</h3>
-            <p>&copy; Copyright AllState, All Rights Reserved by Harsh Parmar 2024</p>
+            <h3>Allstate By Pranav</h3>
+            <p>&copy; Copyright AllState, All Rights Reserved by Pranav Faladu 2024</p>
         </div>
     </footer>
 
